Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29373

qt 4.8.4 fails with Xcode 4.6/clang-4.2 (worked with Xcode 4.5/clang-4.1) "error: extra qualification on member"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 4.8.5
    • 4.8.4
    • None
    • OS X 10.7.5, Xcode 4.6
    • b82b8bfa811adcf11cb8d07d662fd2b9642deebc

      On OS X 10.7 with Xcode 4.6, the build fails with this error:

      clang -c -pipe -O2 -arch x86_64 -Xarch_x86_64 -mmacosx-version-min=10.7 -arch x86_64 -Xarch_x86_64 -mmacosx-version-min=10.7 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk -DQT_SHARED -DQT_BUILD_GUI_LIB -DQT_NO_USING_NAMESPACE -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT3_SUPPORT -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_NO_CUPS -DQT_NO_LPR -DQT_NO_OPENTYPE -DQT_NO_STYLE_WINDOWSVISTA -DQT_NO_STYLE_WINDOWSXP -DQT_NO_STYLE_GTK -DQT_NO_STYLE_WINDOWSCE -DQT_NO_STYLE_WINDOWSMOBILE -DQT_NO_STYLE_S60 -DQ_INTERNAL_QAPP_SRC -DQT_NO_DEBUG -DQT_CORE_LIB -DQT_HAVE_MMX -DQT_HAVE_3DNOW -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -DQT_HAVE_SSE3 -DQT_HAVE_SSSE3 -DQT_HAVE_SSE4_1 -DQT_HAVE_SSE4_2 -DQT_HAVE_AVX -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I../../mkspecs/macx-g++ -I. -I.moc/release-shared -I../../include/QtGui -I.rcc/release-shared -Iimage -I../3rdparty/harfbuzz/src -Idialogs -I../../include/QtCore -I../../include -I.uic/release-shared -F/sw/build.build/qt4-mine-mac-4.8.4-3/qt-everywhere-opensource-src-4.8.4/Library/Frameworks -F/sw/build.build/qt4-mine-mac-4.8.4-3/qt-everywhere-opensource-src-4.8.4/lib kernel/qcursor_mac.mm -o .obj/release-shared/qcursor_mac.o
      In file included from kernel/qcursor_mac.mm:52:
      In file included from ../../include/QtGui/private/qt_cocoa_helpers_mac_p.h:1:
      ../../include/QtGui/private/../../../src/gui/kernel/qt_cocoa_helpers_mac_p.h:158:10: error: extra qualification on member 'TabletProximityRec'
      struct ::TabletProximityRec;
             ~~^
      In file included from kernel/qcursor_mac.mm:47:
      In file included from ../../include/QtGui/qevent.h:1:
      In file included from ../../include/QtGui/../../src/gui/kernel/qevent.h:52:
      In file included from ../../include/QtGui/qmime.h:1:
      ../../include/QtGui/../../src/gui/kernel/qmime.h:119:10: warning: private field 'type' is not used [-Wunused-private-field]
          char type;
               ^
      1 warning and 1 error generated.
      

      This same build used to work with Xcode 4.5.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            nieder Hanspeter Niederstrasser
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes