qt_cocoa_helpers_mac_p.h: fix Clang build when using Xcode 4.6.

This has already been filed under https://bugreports.qt-project.org/browse/QTBUG-29373
but no official Qt fix has arrived yet, so we'll fix it oursevles.